# clipwatch

./: CMakeLists.txt  clipWatch.cpp  clipWatch.h  main.cpp
